styles.css
html, body {
  width: 100vw;
  height: 100%;
}

* {
  box-sizing: border-box;
  margin: 0;
  font-family: 'Times New Roman', Times, serif;
}

header {
  position: fixed;
  display: flex;
  justify-content: stretch;
  width: 100vw;
  height: 33px;
  padding: 4px 15px;
  border-bottom: solid 1px #e2e2e2;
  background: white;
  z-index: 1;
}

.links {
  display: flex;
  flex: 1;
  border: solid 1px red;
  height: 100%;
}

.hamburger {
  width: 25px;
  height: 100%;
}

.magnifier {
  width: 25px;
  height: 100%;
}

.category-nav {
  text-decoration: none;
  color: #000000;
  font-family: "nyt-franklin";
  font-size: 14.25px;
  font-weight: 700;
  line-height: 19px;
  letter-spacing: 0.7px;
}

.logo {
  display: flex;
  flex: 1;
  height: 100%;
  width: 100%;
  border: solid 1px red;
  justify-content: center;
  margin: auto;
}

.nyt-logo {
  height: 25px;
  width: 190px;
}

.filler {
  border: solid 1px red;
  height: 100%;
  flex: 1;
}

main {
  border: solid 1px blue;
  display: flex;
  flex-direction: column;
  align-items: center;
  top: 35px;
  height: 100%;
  width: 100vw;
  padding: 60px;
  font-family: "nyt-franklin";
}

.title {
  height: 96px;
  width: 600px;
  line-height: 1.2em;
  font-size: 40px;
  margin-bottom: 20px;
  border: 1px solid brown;
}

.social {
  display: flex;
  width: 600px;
  height: 34.2px;
  padding-top: 20px;
  margin: 0 auto;
  border-top: 1px solid #ebebeb;
  justify-content: flex-start;
}

a.social-link {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: content-box;
  margin-right: 16px;
  height: 27px;
  width: 27px;
  background: #eeeeee;
  border: none;
  border: 1px #eee solid;
  border-radius: 50%;
}

img.svg {
  box-sizing: content-box;
  height: 15px;
  width: 15px;
  padding: 5px;
  background: transparent;
}

a.social-link:hover {
  background: #fff;
}

button.repost {
  display: flex;
  align-items: center;
  box-sizing: border-box;
  margin-right: 16px;
  padding: 5px;
  height: 27px;
  width: 27px;
  background-color: #eee;
  border: 1px #eee solid;
  border-radius: 50%;
}

button > .repost-svg {
  position: relative;
  flex: 1;
  box-sizing: content-box;
  height: 15px;
  width: 15px;
  background: transparent;
  border: none;
  padding: 0;
  cursor: pointer;
}

button.repost:hover {
  background: #fff;
}

button.bookmark {
  display: flex;
  justify-content: center;
  box-sizing: border-box;
  margin-right: 16px;
  /* padding: 10px 0; */
  height: 29.2px;
  width: 16px;
  background-color: transparent;
  color: #666;
  border: none;
  cursor: pointer;
}

button > .bookmark-svg {
  position: relative;
  background-color: rgba(0, 0, 0, 0);
  height: 25px;
  width: 16px;
  border: none;
}

button > .bookmark-svg:hover {
  opacity: 0.5;
}

.comment-bubble-btn {
  display: flex;
  justify-content: center;
  width: 28px;
  height: 22px;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

div.comment-bubble {
  display: flex;
  box-sizing: content-box;
  position: relative;
  border-radius: 4px;
  background-color: rgba(0, 0, 0, 0);
  border: solid #666 0.733333px;
  font-size: 12px;
  width: 26px;
  height: 13px;
  padding: 4px;
  justify-content: center;
}

div.comment-bubble::before {
  position: absolute;
  display: block;
  content: "";
  border-color: #666 transparent transparent transparent;
  border-style: solid;
  border-width: 6px 0px 0px 8px;
  left: 15px;
  bottom: -7px;
}

div.comment-bubble::after {
  position: absolute;
  display: block;
  content: "";
  border-color: #FFF transparent;
  border-style: solid;
  border-width: 6px 0px 0px 6px;
  left: 16px;
  bottom: -6px;
}

div.comment-bubble:hover {
  opacity: 0.5;
}

figure {
  display: flex;
  flex-direction: column;
  border: 1px solid red;
  justify-content: center;
  max-width: 1200px;
    margin: 25px auto 43px auto;
}

figcaption {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  max-width: 900px;
  color: #666666;
  font-family: "nyt-imperial";
}

.article {
  border: 1px red solid;
}

.credit {
  color: #888888;
  letter-spacing: 0.01em;
  font-size: 13px;
}

.article-info {
  margin-bottom: 25px;
}

.article-info > * {
  width: 600px;
  margin-bottom: 15px;
  line-height: 16px;
  font-size: 0.93rem;
  font-family: sans-serif;
  letter-spacing: 0.02em;
}

.author {
  font-weight: 700;
}

.author > a {
  text-decoration: none;
  color: #333;
  border-bottom: 1px solid #cccccc;
}

time {
  color: #333;
  font-size: 13px;
  line-height: 13px;
  font-weight: 400;
}

.article {
  display: flex;
  flex-direction: column;
  width: 600px; 
  font-size: 21.5px;
  line-height: 27.95px;
}

section.article p {
  margin-bottom: 16px;
}

section.article a {
  color: #326891;
  text-decoration: underline;
  cursor: pointer;
  line-height: 1.3em;
}

.grid-display {
  border: 1px red solid;
  box-sizing: content-box;
  width: 988px;
  height: 754px;
  margin: 15px 0;
}

.image-wrapper {
  background-image: url("images/inflation.png");
  height: 576px;
  background-repeat: none;
}

.grid-display > h1 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-weight: 700;
  margin-bottom: 2px;
}

.grid-display > .lead-in {
  font-size: 14px;
  line-height: 18px;
  color: rgb(102, 102, 102);
  weight: 400;
  margin-right: 7px;
  margin-bottom: 10px;
}

